2021-07-06  Karl Berry  <karl@tug.org>

	* xindy-src/user-commands/xindy.in: for the Mac,
	xindy.run (aka clisp) is now built as a universal binary (x86_64+arm),
	so have to find arch-specific mem file. as we did in the past
	for PowerPC vs. x86_64.
	* TLpatches/patch-12-xindy-mac: new file.
	The patches to xindy.in from original upstream

2020-06-07  Karl Berry  <karl@freefriends.org>

	* ac/withenable.ac: omit $Id$ from generated output.

2020-05-28  J\"urgen Spitzm\"uller  <spitz@lyx.org>

	These patches from:
	https://tug.org/pipermail/tex-live/2020-May/045760.html

	* xindy-src/src/markup.lsp: support giving attributes to the
	markup of separator with :attr.
	* doc/manual-3.html: document this.
	https://sourceforge.net/p/xindy/bugs/1/
	
	* xindy-src/modules/base/makeindex.xdy
	(define-crossref-class, markup-crossref-list): handle
	\see and \seealso added by hyperref.
	* xindy-src/user-commands/texindy.in,
	* xindy-src/user-commands/xindy.in: corresponding doc updates.
	https://sourceforge.net/p/xindy/bugs/62/

	* xindy-src/doc/faq-4.html,
	* xindy-src/doc/manual-3.html: document workaround for
	:min-range-length none being broken.
	https://github.com/jschrod/xindy.ctan/issues/3

2020-03-08  Karl Berry  <karl@tug.org>

	* xindy-src/make-rules/alphabets/Makefile.am (alphabets-inc.tex):
	echo '\f' is not portable; with zsh, dash, others, it outputs
	a form feed. Use printf instead. Report from jfbu,
	https://tug.org/pipermail/tex-live/2020-March/044966.html

2019-02-10  Karl Berry  <karl@tug.org>

	* ac/withenable.ac (KPSE_ENABLE_PROG): just disable,
	cross-compilation is possible if clisp is built (per Luigi).

2017-11-13  Karl Berry  <karl@tug.org>

	* xindy-src/make-rules/inputenc/make-inp-rules.pl: must use \{
	to placate current Perl.
	Report from Josua Stingelin on tex-k, 12 Nov 2017 11:21:27.

2017-03-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xindy-src/user-commands/xindy.in: If a module name cantains directory