@@ -88,7 +88,7 @@
 \edef\x{\Ucharcat`\# 16} % error "! Invalid code (16)"
 \KCAT
 
-\ifdefined\ucs %======
+\ifdefined\enablecjktoken %======
 \edef\x{\Ucharcat`漢 3} % error "! Invalid code (3)"
 \KCAT
 
