@@ -60,7 +60,7 @@
 \show\X\relax\message{(\meaning\X)}
 \show\Y\relax\message{(\meaning\Y)}
 
-\ifx\ucs\undefined\else
+\ifx\enablecjktoken\undefined\else
 \message{■not_cjk}
 \kcatcode`ア=15
 \kcatcode`！=15
