@@ -43,7 +43,7 @@
 \message{\ifx  \yA\yB Y\else N\fi}% pN, uN
 \message{\ifx  \yA\yC Y\else N\fi}% pN, uN
 
-\ifx\ucs\undefined\else
+\ifx\enablecjktoken\undefined\else
   \kcatcode"100=16
   \message{upTeX}
   \def\xA{Ā}% U+0100
